# soto

./: .gitignore  Cargo.toml  FallingObject.tscn  Main.gd  export_presets.cfg  icon.svg.import  manifest.vdf  node_2d.gd  node_2d.tscn  project.godot
.github/workflows/: ci.yml
Godottest/: deckbuilder.gdextension  project.godot
Godottest/res/: audio_bus_layout.tres  node.gd  node_2d.gd  node_2d.tscn  video_stream_player.gd  vsp.gd
deckbuilder/: Cargo.toml
deckbuilder/src/: glow_shader.gdshader  lib.rs  logger.rs  main.rs  tutorial.rs
src/: app.rs  circle_pipeline.rs  fluid_sim.rs  main.rs  rectangle_pipeline.rs
