[package]
edition = "2021"
name = "soto"
publish = false
version = "0.1.0"

[dependencies]
bytemuck = {version = "1.16", features = ["derive"]}
egui = "0.28"
egui-wgpu = "0.28"
egui-winit = "0.28"
flume = "0.11"
glam = "0.28"
glass = {git = "https://github.com/trevyn/glass", branch = "hack"}
image = "0.25"
indexmap = "2.2"
log = "0.4"
notify = "6.1"
path-clean = "1.0.1"
pollster = "0.3"
wgpu = {version = "22.1.0", default-features = false, features = ["naga-ir"]}
winit = "0.29"
winit_input_helper = "0.16"

[patch.crates-io]
egui = {git = "https://github.com/trevyn/egui", branch = "multiclick-text-select"}
egui-wgpu = {git = "https://github.com/trevyn/egui", branch = "multiclick-text-select"}
egui-winit = {git = "https://github.com/trevyn/egui", branch = "multiclick-text-select"}
# egui_demo_lib = {git = "https://github.com/trevyn/egui", branch = "multiclick-text-select"}
# egui_extras = {git = "https://github.com/trevyn/egui", branch = "multiclick-text-select"}
# egui_plot = {git = "https://github.com/trevyn/egui", branch = "multiclick-text-select"}

# [dev-dependencies]
# egui_demo_lib = {version = "0.28"}
# rand = "0.8"
# rapier2d = {version = "0.22.0", features = ["default", "debug-render"]}
# winit_input_helper = "0.16"

# [lints.clippy]
# blocks_in_conditions = "allow"
# field_reassign_with_default = "allow"

[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3
